--- a/index.html
+++ b/index.html
@@ -12,16 +12,37 @@
 
     <script type="text/javascript" src="scripts/library/angular/controllers.js"></script>
 
-    <script type="text/javascript" src="scripts/data/baseModifiers.js"></script>
     <script type="text/javascript" src="scripts/globals.js"></script>
-    <script type="text/javascript" src="scripts/models/models.js"></script>
+    <script type="text/javascript" src="scripts/utils/utils.js"></script>
+    <script type="text/javascript" src="scripts/utils/dateFormatter.js"></script>
+
+    <script type="text/javascript" src="scripts/data/baseModifiers.js"></script>
+    <script type="text/javascript" src="scripts/data/accountModifiers.js"></script>
+
+    <script type="text/javascript" src="scripts/models/modifierType.js"></script>
+    <script type="text/javascript" src="scripts/models/frequency.js"></script>
+    <script type="text/javascript" src="scripts/models/scenario.js"></script>
 </head>
 <body>
 
     <div class="siteSandbox">
 
-        <div id="forecastingList" style="">
-
+        <div id="forecastingList">
+            <div ng-controller="AccountModifiersList">
+                <table class="accountModifiersTable" cellpadding="0" cellspacing="0">
+                    <tbody ng-repeat="mod in mods">
+                        <tr class="accountModifier">
+                            <td class="frequency" style="width:80px;">{{ mod.getFormattedDate() }}</td>
+                            <td class="title">{{ mod.title }}</td>
+                            <td class="amount" ng-class="{negative: mod.getAmountValue()<0}">{{ mod.getFormattedAmount() }}</td>
+                            <!--<td class="balance" ng-class="{negative: mod.balanceAfterModifier<0}">{{ mod.getFormattedBalanceAfterModifier() }}</td>-->
+                        </tr>
+                        <tr class="accountModifier">
+                            <td colspan="3" class="balance bottomBorder" ng-class="{negative: mod.balanceAfterModifier<0}">{{ mod.getFormattedBalanceAfterModifier() }}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
 
         <div id="baseModifiers">
@@ -30,10 +51,10 @@
                     <div>
                         <div class="fLeft bold">{{ mod.title }}</div>
                         <div class="clearBoth"></div>
-                        <div class="fRight amount">{{ text=mod.modType }} {{ mod.amount }}</div>
+                        <div class="fRight amount bold" ng-class="{negative: mod.getAmountValue()<0}">{{ mod.getFormattedAmount() }}</div>
                         <div class="clearBoth"></div>
                     </div>
-                    <div class="fRight frequency">{{ mod.frequency }}</div>
+                    <div class="fRight frequency">{{ mod.frequency.getDescription() }}</div>
                     <div class="clearBoth"></div>
                 </div>
             </div>
